[package]
name = "my_parser_practice_3"
version = "0.1.0"
edition = "2021"
license = "MIT"
description ="My fisrt parser"
include = ["img"]
documentation = "https://docs.rs/my_parser_practice_3"
homepage = "https://github.com/vladyslavBrothervinn/my_parser_practice_3"
repository = "https://github.com/vladyslavBrothervinn/my_parser_practice_3"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib.rs"

[dependencies]
peg = "0.8.2"
